# blacklight

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml
demo/: evil_proxy.py  run_demo.sh
docs/: CAVEATS.md  DESIGN.md  STANDARDIZATION.md
paper/: PAPER.md
src/: fetch.rs  main.rs  manifest.rs  publish.rs  sigstore.rs  verify.rs
tests/: tamper.rs
